fix: fix upsert curriculum and add new api activate status to publish